--- a/archive.html
+++ b/archive.html
@@ -26,7 +26,7 @@
 <ul>
     
         <li>
-            <a href="./posts/2015-08-23-example.html">example post</a> - August 23, 2015
+            <a href="./posts/2019-12-08-vims-sessions.html">Vim sessions - start/refresh helpers</a> - December  8, 2019
         </li>
     
 </ul>
