--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>My Hakyll Blog - About</title>
+        <title>Mostly Vim Stuff - About</title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
+        <link rel="stylesheet" type="text/css" href="./css/syntax.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">My Hakyll Blog</a>
+                <a href="./">Mostly Vim Stuff</a>
             </div>
             <div id="navigation">
                 <a href="./">Home</a>
